fbalpha and fceumm name changes

--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -71,7 +71,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>FBA</fullname>
 		<path>/storage/emulators/roms/mame</path>
 		<extension>.fba .zip .FBA .ZIP</extension>
-		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start fba %ROM% ES</command>
+		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start fbalpha %ROM% ES</command>
 		<platform>arcade</platform>
 	</system>
 
@@ -98,7 +98,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>Nintendo</fullname>
 		<path>/storage/emulators/roms/nes</path>
 		<extension>.nes .zip .NES .ZIP .fds .FDS</extension>
-		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start fceu %ROM% ES</command>
+		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start fceumm %ROM% ES</command>
 		<platform>nes</platform>
 	</system>
 
