change  paths to userdata folder

--- a/packages/retroarch/retroarch.cfg
+++ b/packages/retroarch/retroarch.cfg
@@ -17,11 +17,11 @@ builtin_imageviewer_enable = "true"
 fps_show = "false"
 ui_menubar_enable = "true"
 suspend_screensaver_enable = "true"
-libretro_directory = "~/.config/retroarch/cores"
-libretro_info_path = "~/.config/retroarch/info"
-content_database_path = "~/.config/retroarch/database/rdb"
-cheat_database_path = "~/.config/retroarch/cheats"
-cursor_directory = "~/.config/retroarch/database/cursors"
+libretro_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores"
+libretro_info_path = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/info"
+content_database_path = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/database/rdb"
+cheat_database_path = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cheats"
+cursor_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/database/cursors"
 rewind_enable = "false"
 audio_latency = "64"
 audio_sync = "true"
@@ -74,7 +74,7 @@ pause_nonactive = "true"
 video_swap_interval = "1"
 video_gpu_screenshot = "true"
 video_rotation = "0"
-screenshot_directory = "~/.config/retroarch/screenshots"
+screenshot_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/screenshots"
 auto_screenshot_filename = "true"
 aspect_ratio_index = "21"
 core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
@@ -98,22 +98,22 @@ ups_pref = "false"
 bps_pref = "false"
 ips_pref = "false"
 system_directory = "~/emulators/bios"
-input_remapping_directory = "~/.config/retroarch/config/remaps"
+input_remapping_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/config/remaps"
 audio_resampler = "sinc"
 savefile_directory = "~/emulators/saves"
 savestate_directory = "~/emulators/saves"
-video_shader_dir = "~/.config/retroarch/shaders"
-video_filter_dir = "~/.config/retroarch/filters/video"
-audio_filter_dir = "~/.config/retroarch/filters/audio"
-core_assets_directory = "~/.config/retroarch/downloads"
-assets_directory = "~/.config/retroarch/assets"
-dynamic_wallpapers_directory = "~/.config/retroarch/assets/wallpapers/bichromatic pads"
+video_shader_dir = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/shaders"
+video_filter_dir = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/filters/video"
+audio_filter_dir = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/filters/audio"
+core_assets_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/downloads"
+assets_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/assets"
+dynamic_wallpapers_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/assets/wallpapers/bichromatic pads"
 boxarts_directory = "default"
-playlist_directory = "~/.config/retroarch/playlists"
+playlist_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/playlists"
 xmb_scale_factor = "100"
 xmb_alpha_factor = "75"
 rgui_browser_directory = "~/emulators/roms"
-rgui_config_directory = "~/.config/retroarch/config"
+rgui_config_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/config"
 rgui_show_start_screen = "true"
 menu_navigation_wraparound_enable = "true"
 menu_navigation_browser_filter_supported_extensions_enable = "true"
@@ -122,15 +122,15 @@ menu_entry_normal_color = "ffffffff"
 menu_entry_hover_color = "ff64ff64"
 menu_title_color = "ff64ff64"
 content_history_size = "100"
-joypad_autoconfig_dir = "~/.config/retroarch/autoconfig"
+joypad_autoconfig_dir = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/autoconfig"
 input_autodetect_enable = "true"
-overlay_directory = "~/.config/retroarch/overlay"
+overlay_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/overlay"
 input_overlay_enable = "true"
 input_overlay_enable_autopreferred = "true"
 input_overlay_hide_in_menu = "true"
 input_overlay_opacity = "0.700000"
 input_overlay_scale = "1.000000"
-osk_overlay_directory = "~/.config/retroarch/overlay"
+osk_overlay_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/overlay"
 input_osk_overlay_enable = "true"
 video_message_pos_x = "0.050000"
 video_message_pos_y = "0.050000"
@@ -1563,9 +1563,9 @@ menu_info_btn = "2"
 menu_default_btn = "3"
 menu_scroll_down_btn = "11"
 menu_scroll_up_btn = "10"
-content_history_path = "~/.config/retroarch/content_history.lpl"
-libretro_path = "/storage/.config/retroarch/cores/"
-core_options_path = "~/.config/retroarch/config/retroarch-core-options.cfg"
+content_history_path = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/content_history.lpl"
+libretro_path = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/"
+core_options_path = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/config/retroarch-core-options.cfg"
 recording_output_directory = "
 "
 recording_config_directory = "
@@ -1581,8 +1581,8 @@ bundle_assets_dst_path = "
 bundle_assets_dst_path_subdir = "
 "
 playlist_names = "Atari - 2600.lpl;Atari - 5200.lpl;Atari - 7800.lpl;Atari - Jaguar.lpl;Atari - Lynx.lpl;Atari - ST.lpl;Bandai - WonderSwan Color.lpl;Bandai - WonderSwan.lpl;Coleco - ColecoVision.lpl;DOOM.lpl;FB Alpha - Arcade Games.lpl;GCE - Vectrex.lpl;Magnavox - Odyssey2.lpl;MAME.lpl;Microsoft - MSX2.lpl;Microsoft - MSX.lpl;NEC - PC Engine SuperGrafx.lpl;NEC - PC Engine - TurboGrafx 16.lpl;Nintendo - Famicom Disk System.lpl;Nintendo - Game Boy Advance (e-Cards).lpl;Nintendo - Game Boy Advance.lpl;Nintendo - Game Boy Color.lpl;Nintendo - Game Boy.lpl;Nintendo - Nintendo 64.lpl;Nintendo - Nintendo DS Decrypted.lpl;Nintendo - Nintendo DS (Download Play) (BETA).lpl;Nintendo - Nintendo DSi Decrypted.lpl;Nintendo - Nintendo DSi (DLC).lpl;Nintendo - Nintendo Entertainment System.lpl;Nintendo - Satellaview.lpl;Nintendo - Super Nintendo Entertainment System.lpl;Nintendo - Virtual Boy.lpl;Quake1.lpl;ScummVM.lpl;Sega - 32X.lpl;Sega - Game Gear.lpl;Sega - Master System - Mark III.lpl;Sega - Mega Drive - Genesis.lpl;Sega - PICO.lpl;Sega - SG-1000.lpl;Sinclair - ZX Spectrum +3.lpl;SNK - Neo Geo Pocket Color.lpl;SNK - Neo Geo Pocket.lpl;Sony - PlayStation Portable.lpl;Sony - PlayStation.lpl"
-playlist_cores = "/storage/.config/retroarch/cores/stella_libretro.so;DETECT;/storage/.config/retroarch/cores/prosystem_libretro.so;/storage/.config/retroarch/cores/virtualjaguar_libretro.so;/storage/.config/retroarch/cores/handy_libretro.so;/storage/.config/retroarch/cores/hatari_libretro.so;/storage/.config/retroarch/cores/mednafen_wswan_libretro.so;/storage/.config/retroarch/cores/mednafen_wswan_libretro.so;/storage/.config/retroarch/cores/bluemsx_libretro.so;/storage/.config/retroarch/cores/prboom_libretro.so;/storage/.config/retroarch/cores/fba_libretro.so;/storage/.config/retroarch/cores/vecx_libretro.so;/storage/.config/retroarch/cores/o2em_libretro.so;/storage/.config/retroarch/cores/mame_libretro.so;/storage/.config/retroarch/cores/bluemsx_libretro.so;/storage/.config/retroarch/cores/bluemsx_libretro.so;/storage/.config/retroarch/cores/mednafen_supergrafx_libretro.so;/storage/.config/retroarch/cores/mednafen_pce_fast_libretro.so;/storage/.config/retroarch/cores/nestopia_libretro.so;/storage/.config/retroarch/cores/gpsp_libretro.so;/storage/.config/retroarch/cores/gpsp_libretro.so;/storage/.config/retroarch/cores/gambatte_libretro.so;/storage/.config/retroarch/cores/gambatte_libretro.so;/storage/.config/retroarch/cores/mupen64plus_libretro.so;/storage/.config/retroarch/cores/desmume_libretro.so;/storage/.config/retroarch/cores/desmume_libretro.so;/storage/.config/retroarch/cores/desmume_libretro.so;/storage/.config/retroarch/cores/desmume_libretro.so;/storage/.config/retroarch/cores/nestopia_libretro.so;/storage/.config/retroarch/cores/snes9x_next_libretro.so;/storage/.config/retroarch/cores/snes9x_next_libretro.so;/storage/.config/retroarch/cores/mednafen_vb_libretro.so;/storage/.config/retroarch/cores/tyrquake_libretro.so;/storage/.config/retroarch/cores/scummvm_libretro.so;/storage/.config/retroarch/cores/picodrive_libretro.so;/storage/.config/retroarch/cores/genesis_plus_gx_libretro.so;/storage/.config/retroarch/cores/genesis_plus_gx_libretro.so;/storage/.config/retroarch/cores/genesis_plus_gx_libretro.so;/storage/.config/retroarch/cores/picodrive_libretro.so;/storage/.config/retroarch/cores/genesis_plus_gx_libretro.so;/storage/.config/retroarch/cores/fuse_libretro.so;/storage/.config/retroarch/cores/mednafen_ngp_libretro.so;/storage/.config/retroarch/cores/mednafen_ngp_libretro.so;/storage/.config/retroarch/cores/ppsspp_libretro.so;/storage/.config/retroarch/cores/pcsx_rearmed_libretro.so"
-menu_wallpaper = "~/.config/retroarch/assets/xmb/monochrome/png/bg.png"
+playlist_cores = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/stella_libretro.so;DETECT;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/prosystem_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/virtualjaguar_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/handy_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/hatari_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mednafen_wswan_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mednafen_wswan_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/bluemsx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/prboom_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/fba_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/vecx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/o2em_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mame_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/bluemsx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/bluemsx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mednafen_supergrafx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mednafen_pce_fast_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/nestopia_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/gpsp_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/gpsp_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/gambatte_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/gambatte_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mupen64plus_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/desmume_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/desmume_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/desmume_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/desmume_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/nestopia_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/snes9x_next_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/snes9x_next_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mednafen_vb_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/tyrquake_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/scummvm_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/picodrive_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/genesis_plus_gx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/genesis_plus_gx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/genesis_plus_gx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/picodrive_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/genesis_plus_gx_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/fuse_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mednafen_ngp_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/mednafen_ngp_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/ppsspp_libretro.so;~/.kodi/userdata/addon_data/script.gamestarter/retroarch/cores/pcsx_rearmed_libretro.so"
+menu_wallpaper = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/assets/xmb/monochrome/png/bg.png"
 audio_device = "hw:0,0"
 video_filter = "
 "
@@ -1601,7 +1601,7 @@ cache_directory = "
 "
 resampler_directory = "
 "
-xmb_font = "~/.config/retroarch/assets/xmb/monochrome/font.ttf"
+xmb_font = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/assets/xmb/monochrome/font.ttf"
 input_overlay = "
 "
 input_osk_overlay = "
@@ -1616,7 +1616,7 @@ input_keyboard_layout = "
 "
 menu_thumbnails = "3"
 video_message_color = "ffff00"
-thumbnails_directory = "~/.config/retroarch/thumbnails"
+thumbnails_directory = "~/.kodi/userdata/addon_data/script.gamestarter/retroarch/thumbnails"
 xmb_theme = "0"
 menu_background_gradient = "0"
 xmb_shadows_enable = "false"
