snes core rename

--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -116,7 +116,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>Super Nintendo</fullname>
 		<path>/storage/emulators/roms/snes</path>
 		<extension>.bin .smc .sfc .fig .swc .mgd .zip .BIN .SMC .SFC .FIG .SWC .MGD .ZIP</extension>
-		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start pocketsnes %ROM% ES</command>
+		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start snes9x2010 %ROM% ES</command>
 		<platform>snes</platform>
 	</system>
 
