Wonderswan & Saturn included.

--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -144,7 +144,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>psx</name>
 		<fullname>Playstation</fullname>
 		<path>/storage/emulators/roms/psx</path>
-		<extension>.bin .cue .cbn .img .iso .m3u .mdf .pbp .toc .z .znx .BIN .CUE .CBN .IMG .ISO .M3U .MDF .PBP .TOC .Z .ZNX</extension>
+		<extension>.bin .cue .cbn .img .iso .m3u .mdf .pbp .toc .z .znx .BIN .CUE .CBN .IMG .ISO .M3U .MDF .PBP .TOC .Z .ZNX .zip .ZIP</extension>
 		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start pcsx_rearmed %ROM% ES</command>
 		<platform>psx</platform>
 	</system>
@@ -202,4 +202,23 @@ All systems must be contained within the <systemList> tag.-->
 		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start scummvm</command>
 		<platform>scummvm</platform>
 	</system>
+	
+	<system>
+		<name>saturn</name>
+		<fullname>Sega Saturn</fullname>
+		<path>/storage/roms/saturn</path>
+		<extension>.bin .cue .iso</extension>
+		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start yabause %ROM% ES</command>
+		<platform>saturn</platform>
+	</system>
+	
+	<system>
+		<name>wonderswan</name>
+		<fullname>WonderSwan</fullname>
+		<path>/storage/emulators/roms/wonderswan</path>
+		<extension>.ws .wsc .zip .ZIP</extension>
+		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start mednafen_wswan %ROM% ES</command>
+		<platform>wonderswancolor</platform>
+	</system>
+	
 </systemList>
