Game Gear core fix

--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -35,7 +35,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>Game Gear</fullname>
 		<path>/storage/emulators/roms/gamegear</path>
 		<extension>.gg .bin .sms .zip .GG .BIN .SMS .ZIP</extension>
-		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start picodrive %ROM% ES</command>
+		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start genesis_plus_gx %ROM% ES</command>
 		<platform>gamegear</platform>
 	</system>
 
