DraStic emu WIP

--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -354,4 +354,14 @@ All systems must be contained within the <systemList> tag.-->
        <command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start reicast %ROM% ES</command>
        <platform>dreamcast</platform>
      </system>
+
+      <system>
+	    <name>nds</name>
+	    <fullname>Nintendo DS</fullname>
+	    <path>/home/pi/RetroPie/roms/nds</path>
+	    <extension>.nds .zip .NDS .ZIP</extension>
+	    <command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start nds %ROM% ES</command>
+	    <platform>nds</platform>
+	    <theme>nds</theme>
+	  </system>
 </systemList>
