--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -202,15 +202,6 @@ All systems must be contained within the <systemList> tag.-->
 	</system>
 
 	<system>
-		<name>nds</name>
-		<fullname>Sega Saturn</fullname>
-		<path>/storage/emulators/roms/nds</path>
-		<extension>.zip .ZIP .nds .NDS</extension>
-		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start desmume %ROM% ES</command>
-		<platform>saturn</platform>
-	</system>
-
-	<system>
 		<name>saturn</name>
 		<fullname>Sega Saturn</fullname>
 		<path>/storage/roms/saturn</path>
@@ -358,10 +349,19 @@ All systems must be contained within the <systemList> tag.-->
       <system>
 	    <name>nds</name>
 	    <fullname>Nintendo DS</fullname>
-	    <path>/home/pi/RetroPie/roms/nds</path>
+	    <path>/storage/emulators/roms/nds</path>
 	    <extension>.nds .zip .NDS .ZIP</extension>
 	    <command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start nds %ROM% ES</command>
 	    <platform>nds</platform>
 	    <theme>nds</theme>
 	  </system>
+
+	  	<!-- <system>
+			<name>nds</name>
+			<fullname>Nintendo DS</fullname>
+			<path>/storage/emulators/roms/nds</path>
+			<extension>.zip .ZIP .nds .NDS</extension>
+			<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start desmume %ROM% ES</command>
+			<platform>saturn</platform>
+		</system> -->
 </systemList>
