bin extension added to vectrex

--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -295,7 +295,7 @@ All systems must be contained within the <systemList> tag.-->
         <fullname>Vectrex</fullname>
         <name>vectrex</name>
         <path>/storage/emulators/roms/vectrex/</path>
-        <extension>.zip .ZIP .vec .VEC</extension>
+        <extension>.zip .ZIP .vec .VEC .bin .BIN</extension>
         <command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start vecx %ROM% ES</command>
         <platform>vectrex</platform>
     </system>
