--- a/packages/retroarch/autoconfig/Logitech_Dual_Action.cfg
+++ b/packages/retroarch/autoconfig/Logitech_Dual_Action.cfg
@@ -31,10 +31,10 @@ input_b_btn_label = "2"
 input_y_btn_label = "1"
 input_select_btn_label = "9"
 input_start_btn_label = "10"
-input_up_axis_label = "D-Pad Up"
-input_down_axis_label = "D-Pad Down"
-input_left_axis_label = "D-Pad Left"
-input_right_axis_label = "D-Pad Right"
+input_up_btn_label = "D-Pad Up"
+input_down_btn_label = "D-Pad Down"
+input_left_btn_label = "D-Pad Left"
+input_right_btn_label = "D-Pad Right"
 input_a_btn_label = "3"
 input_x_btn_label = "4"
 input_l_btn_label = "5"
