es config directory change

--- a/packages/emulationstation/es_settings.cfg
+++ b/packages/emulationstation/es_settings.cfg
@@ -12,7 +12,7 @@
 <int name="ScraperResizeHeight" value="0" />
 <int name="ScraperResizeWidth" value="400" />
 <int name="ScreenSaverTime" value="300000" />
-<string name="ConfigDirectory" value="/storage/.emulationstation" />
+<string name="ConfigDirectory" value="/storage/.config/emulationstation" />
 <string name="Scraper" value="TheGamesDB" />
 <string name="ScreenSaverBehavior" value="dim" />
 <string name="ThemeSet" value="simple-nodata" />
