--- a/packages/retroarch/retroarch.cfg
+++ b/packages/retroarch/retroarch.cfg
@@ -1588,7 +1588,7 @@ video_filter = "
 "
 audio_dsp_plugin = "
 "
-core_updater_buildbot_url = ""
+core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/armhf/latest/"
 camera_device = "
 "
 cheevos_username = "
