--- a/packages/emulationstation/es_systems.cfg
+++ b/packages/emulationstation/es_systems.cfg
@@ -107,7 +107,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>Sega MasterSystem</fullname>
 		<path>/storage/emulators/roms/mastersystem</path>
 		<extension>.sms .bin .zip .SMS .BIN .ZIP</extension>
-		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start genesis_plus_gx %ROM% ES</command>
+		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start picodrive %ROM% ES</command>
 		<platform>mastersystem</platform>
 	</system>
 
@@ -326,24 +326,6 @@ All systems must be contained within the <systemList> tag.-->
 		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start cap32 %ROM% ES</command>
 		<platform>amstradcpc</platform>
     </system>
-
-     <system>
-        <fullname>ZX81</fullname>
-        <name>zx81</name>
-        <path>/storage/emulators/roms/zx81</path>
-        <extension>.tzx .TZX .p .P .zip .ZIP</extension>
-		<command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start 81 %ROM% ES</command>
-		<platform>zx81</platform>
-    </system>
-
-    <system>
-       <fullname>Dreamcast</fullname>
-       <name>dreamcast</name>
-       <path>/storage/emulators/roms/dreamcast</path>
-       <extension>.gdi .GDI .cdi .CDI</extension>
-       <command>/storage/.kodi/addons/script.gamestarter/resources/bin/gamestarter.start reicast %ROM% ES</command>
-       <platform>dreamcast</platform>
-     </system>
 
       <system>
 	    <name>nds</name>
