--- a/repository.gamestarter/game.retroarch/retroarch/retroarch.cfg
+++ b/repository.gamestarter/game.retroarch/retroarch/retroarch.cfg
@@ -5,7 +5,7 @@ content_database_path = "~/.config/retroarch/database/rdb"
 cheat_database_path = "~/.config/retroarch/cheats"
 cursor_directory = "~/.config/retroarch/database/cursors"
 screenshot_directory = "~/.config/retroarch/screenshots"
-system_directory = "default"
+system_directory = "~/emulators/bios"
 input_remapping_directory = "~/.config/retroarch/config/remaps"
 video_shader_dir = "~/.config/retroarch/shaders"
 video_filter_dir = "default"
@@ -16,8 +16,8 @@ thumbnails_directory = "~/.config/retroarch/thumbnails"
 playlist_directory = "~/.config/retroarch/playlists"
 joypad_autoconfig_dir = "~/.config/retroarch/autoconfig"
 audio_filter_dir = "default"
-savefile_directory = "default"
-savestate_directory = "default"
+savefile_directory = "~/emulators/saves"
+savestate_directory = "~/emulators/saves"
 rgui_browser_directory = "~/emulators/roms"
 rgui_config_directory = "~/.config/retroarch/config"
 overlay_directory = "~/.config/retroarch/overlay"
@@ -1601,32 +1601,60 @@ content_video_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content
 content_image_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content_image_history.lpl"
 filter_by_current_core = "false"
 xmb_font = "~/.kodi/userdata/addon_data/game.retroarch/assets/xmb/monochrome/font.ttf"
-netplay_nickname = ""
-video_filter = ""
-audio_dsp_plugin = ""
+netplay_nickname = "
+"
+video_filter = "
+"
+audio_dsp_plugin = "
+"
 core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/armhf/latest/"
-netplay_ip_address = ""
-netplay_password = ""
-netplay_spectate_password = ""
-core_options_path = ""
-video_shader = ""
-menu_wallpaper = ""
-input_overlay = ""
-video_font_path = ""
-content_history_dir = ""
-cache_directory = ""
-resampler_directory = ""
-recording_output_directory = ""
-recording_config_directory = ""
-xmb_font = ""
-playlist_names = ""
-playlist_cores = ""
-audio_device = ""
-camera_device = ""
-cheevos_username = ""
-cheevos_password = ""
-video_context_driver = ""
-input_keyboard_layout = ""
-bundle_assets_src_path = ""
-bundle_assets_dst_path = ""
-bundle_assets_dst_path_subdir = ""
+netplay_ip_address = "
+"
+netplay_password = "
+"
+netplay_spectate_password = "
+"
+core_options_path = "
+"
+video_shader = "
+"
+menu_wallpaper = "
+"
+input_overlay = "
+"
+video_font_path = "
+"
+content_history_dir = "
+"
+cache_directory = "
+"
+resampler_directory = "
+"
+recording_output_directory = "
+"
+recording_config_directory = "
+"
+xmb_font = "
+"
+playlist_names = "
+"
+playlist_cores = "
+"
+audio_device = "
+"
+camera_device = "
+"
+cheevos_username = "
+"
+cheevos_password = "
+"
+video_context_driver = "
+"
+input_keyboard_layout = "
+"
+bundle_assets_src_path = "
+"
+bundle_assets_dst_path = "
+"
+bundle_assets_dst_path_subdir = "
+"
