--- a/repository.gamestarter/game.emulationstation/emulationstation/es_systems.cfg
+++ b/repository.gamestarter/game.emulationstation/emulationstation/es_systems.cfg
@@ -350,7 +350,7 @@ All systems must be contained within the <systemList> tag.-->
 	    <fullname>Nintendo DS</fullname>
 	    <path>/storage/emulators/roms/nds</path>
 	    <extension>.nds .zip .NDS .ZIP</extension>
-	    <command>/storage/.kodi/addons/game.retroarch/addon.start nds %ROM% ES</command>
+	    <command>/storage/.kodi/addons/game.drastic/addon.start drastic %ROM% ES</command>
 	    <platform>nds</platform>
 	    <theme>nds</theme>
 	  </system>
