--- a/repository.gamestarter/game.emulationstation/emulationstation/es_systems.cfg
+++ b/repository.gamestarter/game.emulationstation/emulationstation/es_systems.cfg
@@ -86,7 +86,7 @@ All systems must be contained within the <systemList> tag.-->
 
 	<system>
 		<name>msx</name>
-		<fullname>MSX /MSX2</fullname>
+		<fullname>MSX/MSX2</fullname>
 		<path>/storage/emulators/roms/msx</path>
 		<extension>.rom .mx1 .mx2 .col .dsk .zip .ROM .MX1 .MX2 .COL .DSK .ZIP</extension>
 		<command>/storage/.kodi/addons/game.retroarch/addon.start bluemsx %ROM% ES</command>
@@ -95,7 +95,7 @@ All systems must be contained within the <systemList> tag.-->
 
 	<system>
 		<name>nes</name>
-		<fullname>Nintendo</fullname>
+		<fullname>Nintendo NES</fullname>
 		<path>/storage/emulators/roms/nes</path>
 		<extension>.nes .zip .NES .ZIP .fds .FDS</extension>
 		<command>/storage/.kodi/addons/game.retroarch/addon.start fceumm %ROM% ES</command>
@@ -176,7 +176,7 @@ All systems must be contained within the <systemList> tag.-->
 
 	<system>
 		<name>videopac</name>
-		<fullname>Phillips Videopac</fullname>
+		<fullname>Philips Videopac</fullname>
 		<path>/storage/emulators/roms/videopac</path>
 		<extension>.bin .zip .BIN .ZIP</extension>
 		<command>/storage/.kodi/addons/game.retroarch/addon.start o2em %ROM% ES</command>
@@ -301,7 +301,7 @@ All systems must be contained within the <systemList> tag.-->
     </system>
 
     <system>
-        <fullname>lutro</fullname>
+        <fullname>Lutro</fullname>
         <name>lutro</name>
         <path>/storage/emulators/roms/lutro</path>
         <extension>.zip .ZIP .lua .LUA</extension>
@@ -310,7 +310,7 @@ All systems must be contained within the <systemList> tag.-->
     </system>
 
     <system>
-        <fullname>Atarist</fullname>
+        <fullname>Atari ST</fullname>
         <name>atarist</name>
         <path>/storage/emulators/roms/atarist</path>
         <extension>.st .ST .stx .STX .zip .ZIP</extension>
@@ -355,12 +355,4 @@ All systems must be contained within the <systemList> tag.-->
 	    <theme>nds</theme>
 	  </system>
 
-	  	<!-- <system>
-			<name>nds</name>
-			<fullname>Nintendo DS</fullname>
-			<path>/storage/emulators/roms/nds</path>
-			<extension>.zip .ZIP .nds .NDS</extension>
-			<command>/storage/.kodi/addons/game.retroarch/addon.start desmume %ROM% ES</command>
-			<platform>saturn</platform>
-		</system> -->
 </systemList>
