--- a/repository.gamestarter/game.retroarch/retroarch/retroarch-RPi.cfg
+++ b/repository.gamestarter/game.retroarch/retroarch/retroarch-RPi.cfg
@@ -1601,60 +1601,32 @@ content_video_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content
 content_image_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content_image_history.lpl"
 filter_by_current_core = "false"
 xmb_font = "~/.kodi/userdata/addon_data/game.retroarch/assets/xmb/monochrome/font.ttf"
-netplay_nickname = "
-"
-video_filter = "
-"
-audio_dsp_plugin = "
-"
+netplay_nickname = ""
+video_filter = ""
+audio_dsp_plugin = ""
 core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/armhf/latest/"
-netplay_ip_address = "
-"
-netplay_password = "
-"
-netplay_spectate_password = "
-"
-core_options_path = "
-"
-video_shader = "
-"
-menu_wallpaper = "
-"
-input_overlay = "
-"
-video_font_path = "
-"
-content_history_dir = "
-"
-cache_directory = "
-"
-resampler_directory = "
-"
-recording_output_directory = "
-"
-recording_config_directory = "
-"
-xmb_font = "
-"
-playlist_names = "
-"
-playlist_cores = "
-"
-audio_device = "
-"
-camera_device = "
-"
-cheevos_username = "
-"
-cheevos_password = "
-"
-video_context_driver = "
-"
-input_keyboard_layout = "
-"
-bundle_assets_src_path = "
-"
-bundle_assets_dst_path = "
-"
-bundle_assets_dst_path_subdir = "
-"
+netplay_ip_address = ""
+netplay_password = ""
+netplay_spectate_password = ""
+core_options_path = ""
+video_shader = ""
+menu_wallpaper = ""
+input_overlay = ""
+video_font_path = ""
+content_history_dir = ""
+cache_directory = ""
+resampler_directory = ""
+recording_output_directory = ""
+recording_config_directory = ""
+xmb_font = ""
+playlist_names = ""
+playlist_cores = ""
+audio_device = ""
+camera_device = ""
+cheevos_username = ""
+cheevos_password = ""
+video_context_driver = ""
+input_keyboard_layout = ""
+bundle_assets_src_path = ""
+bundle_assets_dst_path = ""
+bundle_assets_dst_path_subdir = ""
