--- a/repository.gamestarter/game.retroarch/retroarch/retroarch-Gen.cfg
+++ b/repository.gamestarter/game.retroarch/retroarch/retroarch-Gen.cfg
@@ -99,11 +99,11 @@ bundle_assets_extract_last_version = "0"
 input_device_p1 = "0"
 input_player1_joypad_index = "0"
 input_libretro_device_p1 = "1"
-input_player1_analog_dpad_mode = "0"
+input_player1_analog_dpad_mode = "1"
 input_device_p2 = "0"
 input_player2_joypad_index = "1"
 input_libretro_device_p2 = "1"
-input_player2_analog_dpad_mode = "0"
+input_player2_analog_dpad_mode = "1"
 input_device_p3 = "0"
 input_player3_joypad_index = "2"
 input_libretro_device_p3 = "1"
@@ -164,7 +164,7 @@ ui_companion_start_on_boot = "true"
 ui_companion_enable = "false"
 video_gpu_record = "false"
 input_remap_binds_enable = "true"
-all_users_control_menu = "false"
+all_users_control_menu = "true"
 menu_swap_ok_cancel_buttons = "true"
 netplay_public_announce = "true"
 netplay_start_as_spectator = "false"
@@ -222,7 +222,7 @@ menu_pause_libretro = "true"
 menu_mouse_enable = "true"
 menu_pointer_enable = "false"
 menu_timedate_enable = "true"
-menu_battery_level_enable = "true"
+menu_battery_level_enable = "false"
 menu_core_enable = "true"
 menu_dynamic_wallpaper_enable = "false"
 xmb_shadows_enable = "false"
@@ -232,7 +232,7 @@ xmb_show_music = "false"
 xmb_show_video = "false"
 xmb_show_netplay = "true"
 xmb_show_history = "true"
-xmb_show_add = "false"
+xmb_show_add = "true"
 rgui_show_start_screen = "false"
 menu_navigation_wraparound_enable = "true"
 menu_navigation_browser_filter_supported_extensions_enable = "true"
@@ -1595,16 +1595,78 @@ input_player16_r_y_minus_axis = "nul"
 input_player16_turbo = "nul"
 input_player16_turbo_btn = "nul"
 input_player16_turbo_axis = "nul"
-content_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content_history.lpl"
-content_music_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content_music_history.lpl"
-content_video_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content_video_history.lpl"
-content_image_history_path = "~/.kodi/userdata/addon_data/game.retroarch/content_image_history.lpl"
+content_history_path = "~/.config/retroarch/content_history.lpl"
+content_music_history_path = "~/.config/retroarch/content_music_history.lpl""
+content_video_history_path = "~/.config/retroarch/content_video_history.lpl"
+content_image_history_path = "~/.config/retroarch/content_image_history.lpl"
 filter_by_current_core = "false"
-xmb_font = "~/.kodi/userdata/addon_data/game.retroarch/assets/xmb/monochrome/font.ttf"
+xmb_font = "~/.config/retroarch/assets/xmb/monochrome/font.ttf"
+core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/x86_64/latest/"
+audio_mixer_volume = "0.000000"
+input_player1_mouse_index = "0"
+input_player2_mouse_index = "0"
+input_player3_mouse_index = "0"
+input_player4_mouse_index = "0"
+input_player5_mouse_index = "0"
+input_player6_mouse_index = "0"
+input_player7_mouse_index = "0"
+input_player8_mouse_index = "0"
+input_player9_mouse_index = "0"
+input_player10_mouse_index = "0"
+input_player11_mouse_index = "0"
+input_player12_mouse_index = "0"
+input_player13_mouse_index = "0"
+input_player14_mouse_index = "0"
+input_player15_mouse_index = "0"
+input_player16_mouse_index = "0"
+audio_mixer_mute_enable = "false"
+menu_horizontal_animation = "true"
+menu_show_online_updater = "true"
+menu_show_core_updater = "true"
+cheevos_verbose_enable = "false"
+savestates_in_content_dir = "false"
+savefiles_in_content_dir = "false"
+systemfiles_in_content_dir = "false"
+screenshots_in_content_dir = "false"
+content_favorites_path = "~/.config/retroarch/content_favorites.lpl"
+menu_framebuffer_opacity = "0.900000"
+input_overlay_show_physical_inputs_port = "0"
+materialui_icons_enable = "true"
+xmb_show_favorites = "true"
+input_overlay_show_physical_inputs = "false"
+video_msg_bgcolor_opacity = "1.000000"
+keymapper_port = "0"
+video_msg_bgcolor_red = "0"
+video_msg_bgcolor_green = "0"
+video_msg_bgcolor_blue = "0"
+framecount_show = "true"
+quick_menu_show_take_screenshot = "true"
+quick_menu_show_save_load_state = "true"
+quick_menu_show_undo_save_load_state = "true"
+quick_menu_show_add_to_favorites = "true"
+quick_menu_show_options = "true"
+quick_menu_show_controls = "true"
+quick_menu_show_cheats = "true"
+quick_menu_show_shaders = "true"
+quick_menu_show_save_core_overrides = "true"
+quick_menu_show_save_game_overrides = "true"
+quick_menu_show_information = "true"
+kiosk_mode_enable = "false"
+menu_show_load_core = "true"
+menu_show_load_content = "true"
+menu_show_information = "true"
+menu_show_configurations = "true"
+menu_show_help = "true"
+menu_show_quit_retroarch = "true"
+menu_show_reboot = "true"
+keymapper_enable = "true"
+playlist_entry_rename = "true"
+video_msg_bgcolor_enable = "false"
+xmb_show_settings_password = ""
+kiosk_mode_password = ""
 netplay_nickname = ""
 video_filter = ""
 audio_dsp_plugin = ""
-core_updater_buildbot_url = "http://buildbot.libretro.com/nightly/linux/x86_64/latest/"
 netplay_ip_address = ""
 netplay_password = ""
 netplay_spectate_password = ""
@@ -1618,7 +1680,6 @@ cache_directory = ""
 resampler_directory = ""
 recording_output_directory = ""
 recording_config_directory = ""
-xmb_font = ""
 playlist_names = ""
 playlist_cores = ""
 audio_device = ""
