--- a/repository.gamestarter/game.retroarch/retroarch/retroarch-RPi.cfg
+++ b/repository.gamestarter/game.retroarch/retroarch/retroarch-RPi.cfg
@@ -180,6 +180,7 @@ check_firmware_before_loading = "false"
 builtin_mediaplayer_enable = "true"
 builtin_imageviewer_enable = "true"
 fps_show = "false"
+framecount_show = "false"
 ui_menubar_enable = "true"
 suspend_screensaver_enable = "true"
 rewind_enable = "false"
